welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:22: error: illegal character '\u00ab'
Right (signifie «droite» en anglais)
                ^BDRBuggle:22: error: illegal character '\u00bb'
Right (signifie «droite» en anglais)
                       ^BDRBuggle:25: error: illegal character '\u00ab'
Left (signifie «gauche» en anglais)
               ^BDRBuggle:25: error: illegal character '\u00bb'
Left (signifie «gauche» en anglais)
                      ^BDRBuggle:2: error: ')' expected but ':' found.
while (estSurMessage():Boolean:) {
                              ^BDRBuggle:50: error: illegal start of simple expression
	}
        ^